--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_map: ^6.1.1
+  latlong2: ^0.9.1
+  url_launcher: ^6.1.11
   tflite_flutter: ^0.12.1
   camera: ^0.11.0+1
   image_picker: ^1.0.4
   image: ^4.0.17
   path: ^1.9.0
   path_provider: ^2.1.3
+  google_maps_flutter: ^2.2.3
+  geolocator: ^11.0.0
+  permission_handler: ^11.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
